@@ -14,6 +14,7 @@ import hipravin.jarvis.googlebooks.jackson.model.BooksVolume;
 import hipravin.jarvis.googlebooks.jackson.model.BooksVolumes;
 import hipravin.jarvis.googlebooks.jackson.model.SearchInfo;
 import org.owasp.esapi.ESAPI;
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 
@@ -34,7 +35,7 @@ import static hipravin.jarvis.engine.model.SearchProviderType.*;
 
 @Service
 public class SearchEngineImpl implements SearchEngine {
-    private final ExecutorService executor = Executors.newCachedThreadPool(new SearchThreadFactory());
+    private final ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
     private static final Pattern UNICODE_SPACES = Pattern.compile("(?U)\\s+");
 
     private final GithubApiClient githubApiClient;
@@ -57,7 +58,11 @@ public class SearchEngineImpl implements SearchEngine {
         var cfBookstore = searchAsync(providers, BOOKSTORE, () -> searchBookstore(request.query()));
         var cfGoogleBooks = searchAsync(providers, GOOGLE_BOOKS, () -> searchGoogleBooks(request.query()));
 
-        return JarvisResponse.combine(cfGithub.join(), cfBookstore.join(), cfGoogleBooks.join());
+        JarvisResponse response = CompletableFuture.allOf(cfGithub, cfBookstore, cfGoogleBooks)
+                .thenApply(_ -> JarvisResponse.combine(cfGithub.join(), cfBookstore.join(), cfGoogleBooks.join()))
+                .join();
+
+        return response;
     }
 
     private CompletableFuture<JarvisResponse> searchAsync(Set<SearchProviderType> searchProviders,
@@ -128,8 +133,8 @@ public class SearchEngineImpl implements SearchEngine {
 
     private ResponseItem fromBookPage(BookPageFtsEntity bp) {
         String title = bp.getBook().getTitle();
-        Long bookId = Objects.requireNonNull(bp.getBookPageId().getBookId());
-        Long pageNum = Objects.requireNonNull(bp.getBookPageId().getPageNum());
+        Long bookId = Objects.requireNonNull(bp.getBookPageId().bookId());
+        Long pageNum = Objects.requireNonNull(bp.getBookPageId().pageNum());
 
         String linkText = "%s, p.%d".formatted(title, pageNum);
         String linkHref = "/api/v1/bookstore/book/%d/rawpdf#page=%d".formatted(
@@ -192,7 +197,7 @@ public class SearchEngineImpl implements SearchEngine {
             return original;
         }
         if (original.size() == 1) {
-            return List.of(original.get(0).stripLeading());
+            return List.of(original.getFirst().stripLeading());
         }
 
         return original.stream()
@@ -200,31 +205,31 @@ public class SearchEngineImpl implements SearchEngine {
                 .toList();
     }
 
-    private List<AuthorResult> authorResultSummary(CodeSearchResult csr) {
-        Function<String, String> approvedAuthorOrOthers =
-                (author) -> githubProperties.approvedAuthors().contains(author) ? author : AuthorResult.OTHERS;
+//    private List<AuthorResult> authorResultSummary(CodeSearchResult csr) {
+//        Function<String, String> approvedAuthorOrOthers =
+//                (author) -> githubProperties.approvedAuthors().contains(author) ? author : AuthorResult.OTHERS;
+//
+//        Map<String, Long> authorCounts = csr.codeSearchItems().stream()
+//                .map(GithubUtils::safeGetLogin)
+//                .map(approvedAuthorOrOthers)
+//                .collect(Collectors.groupingBy(Function.identity(), LinkedHashMap::new, Collectors.counting()));
+//
+//        Stream<AuthorResult> results = authorCounts.entrySet().stream()
+//                .map(e -> new AuthorResult(e.getKey(), e.getValue()));
+//
+//        return Stream.concat(Stream.of(new AuthorResult(AuthorResult.TOTAL, csr.count())), results)
+//                .toList();
+//    }
 
-        Map<String, Long> authorCounts = csr.codeSearchItems().stream()
-                .map(GithubUtils::safeGetLogin)
-                .map(approvedAuthorOrOthers)
-                .collect(Collectors.groupingBy(Function.identity(), LinkedHashMap::new, Collectors.counting()));
-
-        Stream<AuthorResult> results = authorCounts.entrySet().stream()
-                .map(e -> new AuthorResult(e.getKey(), e.getValue()));
-
-        return Stream.concat(Stream.of(new AuthorResult(AuthorResult.TOTAL, csr.count())), results)
-                .toList();
-    }
-
-    private static class SearchThreadFactory implements ThreadFactory {
-        private final AtomicInteger threadNumber = new AtomicInteger(0);
-
-        @Override
-        public Thread newThread(Runnable r) {
-            Thread thread = new Thread(r);
-            thread.setDaemon(true);
-            thread.setName("Search engine worker #%d".formatted(this.threadNumber.getAndIncrement()));
-            return thread;
-        }
-    }
+//    private static class SearchThreadFactory implements ThreadFactory {
+//        private final AtomicInteger threadNumber = new AtomicInteger(0);
+//
+//        @Override
+//        public Thread newThread(Runnable r) {
+//            Thread thread = new Thread(r);
+//            thread.setDaemon(true);
+//            thread.setName("Search engine worker #%d".formatted(this.threadNumber.getAndIncrement()));
+//            return thread;
+//        }
+//    }
 }
